css/post.css
/* ... */
.post-image-caption::after {
  display: block;
  content: "";
  width: 185px;
  margin: 23px auto 30px;
  border-bottom: 3px double #979797
}

.wf-inactive .post-image-caption,
.wf-loading .post-image-caption {
  font-size: 15px;
  line-height: 1.8 !important
}

.wf-inactive .post-image-caption::after,
.wf-loading .post-image-caption::after {
  margin-top: 25px
}

@media only screen and (min-width: 833.3333333333px) {
  .post-footer:after {
    content: "";
    display: table;
    clear: both
  }
}

.post-footer-sources {
  display: none
}

.post-footer-sources {
  font-family: "Junge", sans-serif;
  letter-spacing: 0.06em;
  display: block;
  min-height: 21px;
  padding-right: 55px;
  float: right;
  margin-top: -9px;
  padding-top: 9px;
  color: #818181
}

.post-footer-sources:hover {
  color: #443E40
}

.pagination {
  margin: -10px auto 0;
  display: block;
  border-top: 1px solid #ccc;
  text-align: center;
  align-items: center;
  justify-content: center
}

.pagination:after {
  content: "";
  display: table;
  clear: both
}

@media only screen and (min-width: 715px) {
  .pagination {
    margin: -25px auto 0;
    display: flex;
    border-top: 0
  }
}

.pagination-item {
  line-height: 21px
}

.pagination-item:first-of-type a {
  border-right: 1px solid #ccc
}

.pagination-item:last-of-type a {
  border-left: 1px solid #ccc
}

@media only screen and (min-width: 715px) {
  .pagination-item {
    line-height: 38px
  }
  .pagination-item:first-of-type a {
    border-right: 0
  }
  .pagination-item:last-of-type a {
    border-left: 0
  }
}

.pagination-link,
.pagination-ellipsis {
  padding: 18px 8px 12px;
  min-width: 35px;
  border-bottom: 1px solid #ccc;
  color: #818181;
  letter-spacing: 0.02em;
  clear: both;
  display: block;
  outline: none
}

.pagination-link:hover,
.pagination-ellipsis:hover {
  background: #eee;
  border-color: #443E40;
  color: #443E40
}

.pagination-link[disabled],
.pagination-ellipsis[disabled] {
  pointer-events: none;
  color: #cecece
}

@media only screen and (min-width: 715px) {
  .pagination-link:hover,
  .pagination-ellipsis:hover {
    background: transparent
  }
}

@media only screen and (min-width: 800px) {
  .pagination-link,
  .pagination-ellipsis {
    padding: 13px
  }
}

.pagination-link--selected {
  background: #eee;
  font-weight: bold;
  border-color: #443E40;
  color: #443E40
}

@media only screen and (min-width: 715px) {
  .pagination-link--selected {
    background: transparent
  }
}

.pagination-link--non-numeric {
  clear: none;
  width: 50%;
  float: left
}

@media only screen and (min-width: 715px) {
  .pagination-link--non-numeric {
    float: none;
    width: initial
  }
}

.pagination-link-arrow {
  position: relative
}

.pagination-link-arrow--leftward {
  top: 1px;
  margin-left: -15px
}

@media only screen and (min-width: 715px) {
  .pagination-link-arrow--leftward {
    margin-left: 0
  }
}

.pagination-link-arrow--rightward {
  top: 2px;
  margin-right: -15px
}

@media only screen and (min-width: 715px) {
  .pagination-link-arrow--rightward {
    margin-right: 0
  }
}

.pagination-link-help {
  display: inline
}

@media only screen and (min-width: 715px) {
  .pagination-link-help {
    display: none
  }
}

.pagination-ellipsis {
  pointer-events: none
}

pre,
code {
  background: #FDFFF7;
  color: #4070a0;
}

pre {
  padding: 8px 16px 8px 16px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  border-top-width: thin;
  border-right-width: thin;
  border-bottom-width: thin;
  border-left-width: thin;
  border-top-color: rgb(243, 243, 243);
  border-right-color: rgb(243, 243, 243);
  border-bottom-color: rgb(243, 243, 243);
  border-left-color: rgb(243, 243, 243);
}

blockquote {
  border-left-width: medium;
  border-left-style: solid;
  border-left-color: rgb(96, 160, 176);
  padding-left: 16px;
}

nav {
  list-style: none;
  line-height: 1.2;
  text-align: center;
}

nav ul {
  padding: 0px;
}

nav li {
  display: inline-block;
  padding-left: 12px;
  padding-right: 12px;
}

nav a {
  border-bottom: 1px solid #ccc;
  padding-bottom: 13px;
}

nav a:hover {
  border-color: #443E40;
}

/* nav::after { */
/*   background-image: url("/images/separator.png"); */
/*   background-size: 100%; */
/*   background-repeat: no-repeat; */
/*   background-position: center bottom; */
/*   background-color: transparent; */
/*   content: ""; */
/*   width: 100%; */
/*   max-width: 596px; */
/*   height: 42px; */
/*   display: block; */
/*   margin: 20px auto 50px; */
/*   background-size: 596px !important */
/* } */

@media only screen and (-webkit-min-device-pixel-ratio: 1.2),
only screen and (min--moz-device-pixel-ratio: 1.2),
only screen and (-o-min-device-pixel-ratio: 5 / 4),
only screen and (min-device-pixel-ratio: 1.2),
only screen and (min-resolution: 120dpi),
only screen and (min-resolution: 1.2dppx) {
  nav::after {
    background-image: url("/images/separator@2x.png")
  }
}

@media only screen and (-webkit-min-device-pixel-ratio: 3),
only screen and (min--moz-device-pixel-ratio: 3),
only screen and (-o-min-device-pixel-ratio: 3 / 1),
only screen and (min-device-pixel-ratio: 3),
only screen and (min-resolution: 288dpi),
only screen and (min-resolution: 3dppx) {
  nav::after {
    background-image: url("/images/separator@3x.png")
  }
}

@media only screen and (min-width: 645px) {
  nav::after {
    margin-top: 5px
  }
}

.post-list ul li {
  font-family: "Junge", sans-serif;
  font-size: 1.2em;
  display: block;
  color: #818181;
  margin: 15px 0 25px;
  letter-spacing: 0.06em;
}

.post-list-tags {
  font-size: 1.0em;
}

.post-list-tags a {
  font-size: 1.0em;
}

.post-body table {
  empty-cells: show;
  border: 1px solid #cbcbcb;
  margin-left: auto;
  margin-right: auto;
}

.post-body table caption {
  color: #000;
  font: italic 85% / 1 arial, sans-serif;
  padding: 1em 0;
  text-align: center
}
/* ... */

